<resources>
    <string name="app_name">Mess QR</string>
    <string name="todo">TODO</string>
    <string name="timer">timer</string>
    <string name="monthly">MONTHLY</string>
    <string name="active_plan">ACTIVE PLAN</string>
    <string name="scan">SCAN</string>
    <string name="special_meal">Special meal</string>
    <string name="payment">PAYMENT</string>
    <string name="available_plans">AVAILABLE PLANS</string>
    <string name="special_meal_caps">SPECIAL MEAL</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="dinner_available">Dinner available</string>
    <string name="chicken_curry">1. Chicken Curry</string>
    <string name="curry_description">One coupon consists of 2 pieces and</string>
    <string name="Signup">Not have any account? <b>Sign up</b> </string>
    <string name="_3850">₹ 3850/-</string>
    <string name="_155">₹ 155/-</string>
    <string name="_50">₹ 50/-</string>
    <string name="chicken_curry_CAP">CHICKEN CURRY</string>
    <string name="announcement">ANNOUNCEMENT</string>
    <string name="history">HISTORY</string>
    <string name="heading">HEADING</string>
    <string name="enter_the_heading">Enter the Heading</string>
    <string name="date">DATE</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="description">DESCRIPTION</string>
    <string name="enter_the_details">Enter the Details</string>
    <string name="price">PRICE</string>
    <string name="enter_the_price_if_applicable">Enter the Price if applicable</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="continue_cap">CONTINUE</string>
    <string name="admin_verification">Admin Verification</string>
    <string name="confirm">Confirm</string>
    <string name="welcome">WELCOME</string>
    <string name="student">Student</string>
    <string name="admin">Admin</string>
    <string name="mess">Mess</string>
    <string name="qr_system">QR System</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="months_days">MONTHS(DAYS)</string>
    <string name="amount_paid">AMOUNT PAID</string>
    <string name="_135">135</string>
    <string name="rs_3850">Rs.3850/-</string>
    <string name="description_special_menu_admin_announcement">Announce the details of the special meal which is going to serve today</string>
    <string name="menu_change">Menu Change</string>
    <string name="desc_menu_change">Announce the details of the change in the menu which is going to serve</string>
    <string name="general_mail">General Message</string>
    <string name="desc_general_mail_admin_announce">Announce the general details related to the mess</string>
    <string name="desc_special_menu_user">Details of the special meal which is going to serve today</string>
    <string name="desc_menu_change_user">Details of the change in the menu which is going to serve</string>
    <string name="desc_general_mail_user">Details related to the mess</string>
    <string name="details">Details</string>
    <string name="price_r">PRICE- ₹</string>
    <string name="enter_the_date">Enter the Date</string>
    <string name="announce">Announce</string>
    <string name="profile_cap">PROFILE</string>
    <string name="email">Email</string>
    <string name="you_are_logged_in_as">You are logged in as</string>
    <string name="log_out">Log Out</string>
    <string name="qr_generator">QR GENERATOR</string>
    <string name="enter_meal">enter meal</string>
    <string name="generate">GENERATE</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create">CREATE</string>
    <string name="place_holder_time">00:00:00</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="update_your_profile">UPDATE YOUR PROFILE</string>
    <string name="name">Name</string>
    <string name="name_">Name:</string>
    <string name="hello__">Hello !!!</string>
    <string name="email_address_">Email Address:</string>
    <string name="age_">Age:</string>
    <string name="department_">Department:</string>
    <string name="mobile_number_">Mobile number:</string>
    <string name="edit">EDIT</string>
    <string name="student_s_details">STUDENT\'S DETAILS</string>
    <string name="email_of_student">Email of student</string>
    <string name="enter_e_mail">Enter e-mail</string>
    <string name="age">Age</string>
    <string name="department">Department</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="fetch">FETCH</string>
</resources>
