<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dullCyan"
    tools:context=".enterAnnounce">

    <TextView
        android:id="@+id/white_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/white_textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/announceText" />

    <TextView
        android:id="@+id/nav_bar_back"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:background="@drawable/nav_design"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/qr_generate_Ibutton"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:background="@color/Cyan"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nav_bar_back"
        app:srcCompat="@drawable/ic_baseline_qr_code_24"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/announce_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Cyan"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toTopOf="@id/qr_generate_Ibutton"
        app:layout_constraintBottom_toBottomOf="@id/qr_generate_Ibutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/qr_generate_Ibutton"
        app:srcCompat="@drawable/ic_baseline_mail_outline_24"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/announceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dullCyan"
        android:fontFamily="sans-serif"
        android:text="@string/announcement"
        android:textColor="@color/Cyan"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/heading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/white_back" />

    <EditText
        android:id="@+id/heading_edit_text"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:hint="@string/enter_the_heading"
        app:layout_constraintStart_toStartOf="@id/heading_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading_text"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/heading_text"
        app:layout_constraintTop_toBottomOf="@id/heading_edit_text"/>

    <EditText
        android:id="@+id/date_edit_text"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:hint="@string/enter_the_date"
        app:layout_constraintStart_toStartOf="@id/date_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_text"
        android:importantForAutofill="no"
        android:inputType="date" />

    <TextView
        android:id="@+id/details_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/date_text"
        app:layout_constraintTop_toBottomOf="@id/date_edit_text"/>


    <EditText
        android:id="@+id/details_edit_text"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:hint="@string/enter_the_details"
        app:layout_constraintStart_toStartOf="@id/details_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_text"
        android:importantForAutofill="no"
        android:inputType="textLongMessage" />

    <TextView
        android:id="@+id/price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/details_text"
        app:layout_constraintTop_toBottomOf="@id/details_edit_text"/>

    <EditText
        android:id="@+id/price_edit_text"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:hint="@string/enter_the_details"
        app:layout_constraintStart_toStartOf="@id/price_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_text"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/Announce_button"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:background="@drawable/shadow"
        android:text="@string/announce"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_edit_text"
        app:layout_constraintBottom_toTopOf="@id/nav_bar_back"/>

</androidx.constraintlayout.widget.ConstraintLayout>