<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dullCyan"
    tools:context=".MainActivity2">


    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="291dp"
        android:layout_height="272dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/welcomeText"
        app:layout_constraintStart_toStartOf="@id/welcomeText"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:srcCompat="@drawable/group_1"
        android:importantForAccessibility="no"/>

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dullCyan"
        android:fontFamily="sans-serif"
        android:text="@string/welcome"
        android:textColor="@color/Cyan"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/studentButton"
        android:layout_width="184dp"
        android:layout_height="40dp"
        android:background="@drawable/shadow"
        android:backgroundTint="@color/Cyan"
        android:text="@string/student"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@id/mainImage"
        app:layout_constraintStart_toStartOf="@id/mainImage"
        app:layout_constraintTop_toBottomOf="@id/mainImage"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="184dp"
        android:layout_height="40dp"
        android:background="@drawable/shadow"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/Cyan"
        android:text="@string/admin"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/studentButton"
        app:layout_constraintStart_toStartOf="@id/studentButton"
        app:layout_constraintTop_toBottomOf="@id/studentButton"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/adminButton"
        app:layout_constraintStart_toStartOf="@id/adminButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>