<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dullCyan"
    tools:context=".MainActivity3">



    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/dullCyan"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up"
        android:textColor="@color/Cyan"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="291dp"
        android:layout_height="272dp"
        android:importantForAccessibility="no"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/sign_up_text"
        app:layout_constraintStart_toStartOf="@id/sign_up_text"
        app:layout_constraintTop_toBottomOf="@id/sign_up_text"
        app:srcCompat="@drawable/group_1"/>

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/mainImage"
        app:layout_constraintEnd_toEndOf="@id/mainImage"
        app:layout_constraintStart_toStartOf="@id/mainImage"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/editTextUserName"
        app:layout_constraintStart_toStartOf="@id/editTextUserName"
        app:layout_constraintTop_toBottomOf="@id/editTextUserName"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:background="@drawable/shadow"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/Cyan"
        android:text="@string/create"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/editTextPassword"
        app:layout_constraintStart_toStartOf="@id/editTextPassword"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>