<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/history"
        android:textColor="@color/Cyan"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:background="@drawable/nav_design"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/card_number"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView26"
        app:layout_constraintEnd_toStartOf="@+id/textView29"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/months_days"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView33"
        app:layout_constraintEnd_toStartOf="@+id/textView35"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:text="@string/amount_paid"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView32"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_135"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView35"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="88dp"
        android:text="@string/rs_3850"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/special_meal_caps"
        android:textColor="#000000"
        android:textSize="20sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView28"
        app:layout_constraintEnd_toStartOf="@+id/textView36"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="October(31Days)"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView36"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="84dp"
        android:layout_marginBottom="8dp"
        android:text="3 Times"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView32"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageButton
        android:id="@+id/announce_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/Cyan"
        android:importantForAccessibility="no"
        android:minWidth="48dp"
        android:src="@drawable/ic_baseline_notifications_none_24"
        app:layout_constraintEnd_toStartOf="@id/payment_Ibutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView24"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:id="@+id/payment_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:background="@color/Cyan"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/announce_Ibutton"
        app:layout_constraintStart_toEndOf="@id/announce_Ibutton"
        app:layout_constraintEnd_toStartOf="@id/scan_Ibutton"
        app:layout_constraintTop_toTopOf="@id/announce_Ibutton"
        app:srcCompat="@drawable/ic_payment_icon_24" />

    <ImageButton
        android:id="@+id/scan_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Cyan"
        android:minWidth="48dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_scanner_24"
        app:layout_constraintBottom_toBottomOf="@id/payment_Ibutton"
        app:layout_constraintTop_toTopOf="@id/payment_Ibutton"
        app:layout_constraintStart_toEndOf="@id/payment_Ibutton"
        app:layout_constraintEnd_toStartOf="@id/history_Ibutton"
        />

    <ImageButton
        android:id="@+id/history_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_back"
        android:padding="8dp"
        android:minWidth="48dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_history_24"
        app:layout_constraintBottom_toBottomOf="@id/payment_Ibutton"
        app:layout_constraintStart_toEndOf="@id/scan_Ibutton"
        app:layout_constraintEnd_toStartOf="@id/profile_Ibutton"
        app:layout_constraintTop_toTopOf="@id/payment_Ibutton" />

    <ImageButton
        android:id="@+id/profile_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Cyan"
        android:layout_marginEnd="8dp"
        android:minWidth="48dp"

        android:importantForAccessibility="no"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintBottom_toBottomOf="@id/history_Ibutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/history_Ibutton"
        app:layout_constraintTop_toTopOf="@id/history_Ibutton"/>

</androidx.constraintlayout.widget.ConstraintLayout>