<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dullCyan"
    tools:context=".ProfileScreen">

    <TextView
        android:id="@+id/profile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/profile_cap"
        android:textColor="@color/Cyan"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nav_bar_back"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:background="@drawable/nav_design"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!--    <ImageView-->
    <!--        android:id="@+id/imageView5"-->
    <!--        android:layout_width="252dp"-->
    <!--        android:layout_height="384dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.496"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView23"-->
    <!--        app:layout_constraintVertical_bias="0.057"-->
    <!--        app:srcCompat="@drawable/whatsapp_image_2022_07_19_at_3_38_04_pm" />-->

    <ImageButton
        android:id="@+id/announce_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/Cyan"
        android:importantForAccessibility="no"
        android:minWidth="48dp"
        android:src="@drawable/ic_baseline_notifications_none_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/payment_Ibutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nav_bar_back" />

    <ImageButton
        android:id="@+id/payment_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Cyan"
        android:importantForAccessibility="no"
        android:minWidth="48dp"
        app:layout_constraintBottom_toBottomOf="@id/announce_Ibutton"
        app:layout_constraintEnd_toStartOf="@id/scan_Ibutton"
        app:layout_constraintStart_toEndOf="@id/announce_Ibutton"
        app:layout_constraintTop_toTopOf="@id/announce_Ibutton"
        app:srcCompat="@drawable/ic_payment_icon_24" />

    <ImageButton
        android:id="@+id/scan_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Cyan"
        android:importantForAccessibility="no"
        android:minWidth="48dp"
        app:layout_constraintBottom_toBottomOf="@id/payment_Ibutton"
        app:layout_constraintEnd_toStartOf="@id/history_Ibutton"
        app:layout_constraintStart_toEndOf="@id/payment_Ibutton"
        app:layout_constraintTop_toTopOf="@id/payment_Ibutton"
        app:srcCompat="@drawable/ic_scanner_24" />

    <ImageButton
        android:id="@+id/history_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Cyan"
        android:importantForAccessibility="no"
        android:minWidth="48dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/payment_Ibutton"
        app:layout_constraintEnd_toStartOf="@id/profile_Ibutton"
        app:layout_constraintStart_toEndOf="@id/scan_Ibutton"
        app:layout_constraintTop_toTopOf="@id/payment_Ibutton"
        app:srcCompat="@drawable/ic_history_24" />

    <ImageButton
        android:id="@+id/profile_Ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_back"
        android:importantForAccessibility="no"
        android:minWidth="48dp"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintBottom_toBottomOf="@id/history_Ibutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/history_Ibutton"
        app:layout_constraintTop_toTopOf="@id/history_Ibutton" />
    <TextView
        android:id="@+id/logged_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_are_logged_in_as"
        android:textSize="24sp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_text" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/teal_700"
        android:textSize="34sp"
        android:layout_marginTop="20dp"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logged_in_text"/>


    <Button
        android:id="@+id/log_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/nav_bar_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>